                                                         -*- coding: utf-8 -*-

Changes with Apache Traffic Server 3.1.0
  *) [TS-869]: The stat code for ram_cache miss is lost, Author: mohan_zl

  *) [TS-873]: Wrong code in iocore/net/UnixNet.cc, Author: mohan_zl

  *) [TS-833]: Continuation::handleEvent deadbeef fix, authors jplevyak and
  taorui.

  *) [TS-834]: InactivityCopy::check_inactivity crash.

  *) [TS-864] Need more information from CacheHttpInfo (req time, resp time,
  size). Author: William Bardwell.

  *) [TS-860] Built in error for host not found looks like Internet Explorer
  error. Author: William Bardwell.

  *) [TS-861] Need a way to disable Vary: Accept-Encoding checking so a plugin
  can take care of that. Author: William Bardwell.

  *) [TS-862] Need to be able to make keep alive connections not shared on a
  per-transaction basis. Author: William Bardwell.

  *) [TS-865] Need to get address for a VConn from a plugin similar to how you
   can get it for the various things in a transaction. Author: William
   Bardwell.

  *) [TS-868] build fails with --as-needed. Author: Ilya Barygin.

  *) [TS-851] run TS without a real interface

  *) [TS-822] make cluster thread number configable

  *) [TS-845] make proxy.config.cluster.ethernet_interface default to
   loopback interface: lo on linux and lo0 on bsd derivatives

  *) [TS-847] Bad timeout when using CONNECT method.

  *) [TS-826] TSHttpTxnErrorBodySet() can leak memory. Author: William
  Bardwell.

  *) [TS-840] Regression checks fail (again) due to faulty assert use.
   Author: Arno Toell.

  *) [TS-842] remove uninstall target from build system

  *) [TS-648] Use hwloc library when available. This can be disabled
   with --disable-hwloc.

  *) [TS-398] Autoscaling threads vs Hyper Threading. This requires
   support for hwloc as well.

  *) [TS-760] Cleanup mgmt types.

  *) [TS-359] Remove DIR_SEP and use slash directly.

  *) [TS-839] Build problems when specifying lmza location.
