@@ -1,6 +1,8 @@
                                                          -*- coding: utf-8 -*-
 
 Changes with Apache Traffic Server 3.1.0
+  *) [TS-870]: Fix evacuate relevant codes in cache to work, Author: mohan_zl
+
   *) [TS-869]: The stat code for ram_cache miss is lost, Author: mohan_zl
 
   *) [TS-873]: Wrong code in iocore/net/UnixNet.cc, Author: mohan_zl
